Fix footer and show all of the description on mobile

--- a/sass/components/styles.scss
+++ b/sass/components/styles.scss
@@ -97,7 +97,7 @@
   figure {
     border-radius: 16px;
     overflow: hidden;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     float: right;
     width: 110px;
     height: 110px;
@@ -114,7 +114,8 @@
     padding: 1.5em;
     figure {
       width: 130px;
-      height: 130px;
+      height: auto;
+      max-height: 130px;
     }
   }
   aside {
@@ -124,7 +125,7 @@
     strong {
       display: block;
       font-size: 1.5em;
-      margin: 0.5em 0;
+      margin: 0.25em 0 0.5em;
       @include device(tablet) {
         font-size: 1.75em;
       }
@@ -141,6 +142,7 @@
     }
     .city {
       margin-bottom: 10px;
+      margin-right: 6px;
       font-size: 0.875em;
     }
     .relocate {
@@ -148,7 +150,7 @@
       background-size: 10px auto;
       font-size: 9px;
       display: inline-block;
-      margin: 0 0 1em 6px;
+      margin: 0 0 1em 0;
       background-color: $color-brand;
       border-radius: 2px;
       padding: 2px 4px 1px 16px;
@@ -158,13 +160,11 @@
       background: $color-brand;
       padding-left: 4px;
     }
-    .desc {
-      max-height: 70px;
-      overflow: hidden;
-    }
+
     @include device(tablet) {
       .desc {
         max-height: 40px;
+        overflow: hidden;
       }
     }
   }
